--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "MongoDbConfig": {
+    "ConnectionString": "mongodb://localhost:27017?directConnection=true",
+    "Name": "Identity",
+    "Host": "localhost",
+    "Port": 27017
+  },
   "AllowedHosts": "*"
 }
