Login,Logout,EmailConfirmation,AssignRole,GetUsers Created

--- a/appsettings.json
+++ b/appsettings.json
@@ -11,5 +11,12 @@
     "Host": "localhost",
     "Port": 27017
   },
+  "MailSettings": {
+    "Mail": "singal.vishal.dcs23@vnsgu.ac.in",
+    "DisplayName": "ERVISHAL",
+    "Password": "<Pa$$w0rd>",
+    "Host": "smtp.gmail.com",
+    "Port": 587
+  },
   "AllowedHosts": "*"
 }
